# Pbthal-Archive-Manager

./: .gitignore  README.md  pyproject.toml
data/: archives_links
data/archives/: airy  airy48  budgie  def  defapril2020  defapril2021  defaug2020  defaug2021  defaug2023  defdec2020  defdec2021  defdec2022  deffeb2021  deffeb2022  defjan2021  defjan2022  defjuly2020  defjuly2021  defjuly2022  defjune2020  defjune2021  defjune2022  defmarch2020  defmarch2022  defmarch2023  defmay2020  defmay2021  defmay2022  defmay2023  defnov2020  defnov2021  defoct2020  defoct2021  defoct2022  defsept2020  defsept2021  defsept2022  diminishing  minimax  nines  (+12 more)
data/recordings_links/: airy  airy48  budgie  def  defapril2020  defapril2021  defaug2020  defaug2021  defaug2023  defdec2020  defdec2021  defdec2022  deffeb2021  deffeb2022  defjan2021  defjan2022  defjuly2020  defjuly2021  defjuly2022  defjune2020  defjune2021  defjune2022  defmarch2020  defmarch2022  defmarch2023  defmay2020  defmay2021  defmay2022  defmay2023  defnov2020  defnov2021  defoct2020  defoct2021  defoct2022  defsept2020  defsept2021  defsept2022  diminishing  minimax  nines  (+12 more)
pbthal_archive_manager/: __main__.py  album.py  album_covers.py  dearchive.py  mass_rename.py  real_debrid_download.py  recording_links.py  search_pbthal.py
